@@ -1,3 +1,3 @@
-release: "prerelease-1.6.6"
+release: "1.6.6"
 timestamp: 1335306734
 api_versions: ['1']
