@@ -20,12 +20,14 @@
 
 """Search API module."""
 
+from search import AddDocumentError
 from search import AddError
 from search import AddResult
 from search import AtomField
 from search import Cursor
 from search import DateField
 from search import Document
+from search import DocumentOperationResult
 from search import Error
 from search import Field
 from search import FieldExpression
@@ -41,6 +43,7 @@ from search import NumberField
 from search import OperationResult
 from search import Query
 from search import QueryOptions
+from search import RemoveDocumentError
 from search import RemoveError
 from search import RemoveResult
 from search import RescoringMatchScorer
